+hash +send email optional +salutation -yaml

--- a/example_form.html
+++ b/example_form.html
@@ -6,6 +6,9 @@
     <td colspan="2"> <b>Data</b> </td> <td> <b>display publicly ?</b></td>
   </tr>
   <tr>
+    <td>Salutation:</td> <td><input type="text" name="salutation"></td> <td><input type="checkbox" name="display_salutation" checked></td>
+  </tr>  
+  <tr>
     <td>Given Name:</td> <td><input type="text" name="gname"></td> <td><input type="checkbox" name="display_gname" checked></td>
   </tr>
   <tr>
