put together very basic captcha example

--- a/example_form.html
+++ b/example_form.html
@@ -29,7 +29,12 @@
   <tr>
     <td>Country:</td> <td><input type="text" name="addr_country"></td> <td><input type="checkbox" name="display_addr_country" checked></td>
   </tr>
+  <tr>
+    <td>Enter this text <img src="captcha.php"/></td> <td><input type="text" name="captcha"></td> <td></td>
+  </tr>
+  
 </table>
+
 <input type="submit"/>
 </form>
 </body>
