--- a/example_form.html
+++ b/example_form.html
@@ -30,6 +30,15 @@
     <td>Country:</td> <td><input type="text" name="addr_country"></td> <td><input type="checkbox" name="display_addr_country" checked></td>
   </tr>
   <tr>
+    <td>Custom Option1:</td> <td><input type="checkbox" name="option1"></td> <td></td>
+  </tr>
+  <tr>
+    <td>Custom Option2:</td> <td><input type="checkbox" name="option2"></td> <td></td>
+  </tr>
+  <tr>
+    <td>Custom Option3:</td> <td><input type="checkbox" name="option3"></td> <td></td>
+  </tr>
+  <tr>
     <td>Enter this text <img src="captcha.php"/></td> <td><input type="text" name="captcha"></td> <td></td>
   </tr>
   
